# research-skills

./: README.md
agents-config/: 文献侦查员-AGENTS.md  (+4 more)
scholar-slides/: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SKILL.md  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
scholar-slides/benchmarks/: README.md  manifest.json
scholar-slides/benchmarks/eval/: scorecard.md
scholar-slides/docs/: 03-design-proposal.md  04-panda-aesthetic-audit.md  README.md
scholar-slides/learnings/: 2026-07-09-figure-size-vertical-budget.md  2026-07-14-porting-craft-rules-not-looks.md
scholar-slides/references/: aesthetics-review.md  charts.md  citations.md  deck-types.md  design-system.md  export.md  figures-tables.md  ingestion.md  integrity.md  math.md  narrative.md  qa-self-review.md  slide-spec.md
scholar-slides/scripts/: build_deck.mjs  crop_figure.py  detect_figures.py  export_pptx.mjs  fetch_bib.py  ingest_pdf.py  make_chart.py  prepare_source.py  qa_report.mjs  render_deck.mjs  run_benchmark.mjs  speaker_notes.mjs  validate_deck.mjs  verify_pptx_parity.py  verify_slides.mjs
scholar-slides/scripts/lib/: emphasis.mjs  escape.mjs  figure.mjs  img_size.mjs  layouts.mjs  math.mjs  notes.mjs  pptx_layout.mjs  qa.mjs  render_checks.mjs  table.mjs
scholar-slides/tests/: conftest.py  deck.test.mjs  emphasis.test.mjs  figure_sizing.test.mjs  notes.test.mjs  pptx.test.mjs  qa.test.mjs  render_checks.test.mjs  test_crop_figure.py  test_detect_figures.py  test_fetch_bib.py  test_ingest_pdf.py  test_make_chart.py  test_pptx_parity.py
(+55 files in other folders)
